# ansiart

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: python-publish.yml  python_test.yml
ansiart/: __init__.py  _version.py  ansiart.py
tests/: test_ansiart.py
