[build-system]
requires = ["setuptools>=42","wheel","setuptools_scm[toml]>=3.4"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "ansiart/_version.py"
local_scheme = "no-local-version"

[project]
name = "ansiart"
description = "This is a library that converts the image to ANSI escape sequence, outputs it to the CLI, and saves/loads into a text file."
readme = "README.md"
authors = [{ name = "kokecoco", email = "kokecoco.kw@gmail.com" }]
keywords = ["ansi", "art", "image", "cli", "terminal"]
license = {file = "LICENSE"}
dependencies = [
    "Pillow==10.2.0"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dynamic = ["version"]
urls = {
    Homepage = "https://kokecoco.github.io/ansiart-docs/",
    Repository = "https://github.com/Kokecoco/ansiart"
}


[tool.setuptools]
include-package-data = true
packages = ["ansiart"]
